src/pages/public/orders/index.scss
/* width */
::-webkit-scrollbar {
  width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #3A3A3C;
  border-radius: 20px;}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #F7931A;
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgba(247, 147, 26, 0.64);
}


.orders-container {
  overflow-y: auto;
  height: 580px;

  .order-list-item {
    padding-right: 20px;

    .order-list-item-date {
      font-weight: 600;
      font-size: 24px;
      letter-spacing: -0.5px;
      color: #FFFFFF;
      margin-bottom: 20px;
    }

    .order-list-content {
      display: flex;
      align-items: center;

      .order-list-details {
        flex: 1;
        display: flex;
        flex-direction: column;

        .order-status-heading {
          font-weight: 600;
          font-size: 15px;
          color: #F75C1A;
          margin-bottom: 10px;
        }

        .order-status-value {
          font-size: 21px;
          line-height: 24px;
          color: #FFFFFF;
          font-weight: 200;

          .order-status-icon {
            margin-right: 13.24px;
          }
        }
      }
    }
  }
}

